@@ -1,3 +1,11 @@
+2007-05-24 20:30 nick
+
+	* panel/panel-item-manager.c: Rewrite some code, internal plugins
+	  now need the X-XFCE-Module-Path entry in the desktop file. A
+	  warning is shown if they don't have it. This to avoid wrong module
+	  loading (and yes this might break internal plugins, but the plugin's 
+	  desktop file needs to be fixed instead!). Also fixes bug #3279.
+
 2007-05-24 14:00 nick
 
 	* panel/panel-item-manager.c: Improve the module warnings a bit.
